--- a/HTTP_Server/HTTP_Server.uvprojx
+++ b/HTTP_Server/HTTP_Server.uvprojx
@@ -433,6 +433,51 @@
               <FileType>5</FileType>
               <FilePath>.\ADC.h</FilePath>
             </File>
+            <File>
+              <FileName>lpc17xx_rtc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\lpc17xx_rtc.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_rtc.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc17xx_rtc.h</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_clkpwr.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\lpc17xx_clkpwr.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_clkpwr.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc17xx_clkpwr.h</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_libcfg_default.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\lpc17xx_libcfg_default.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_libcfg_default.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc17xx_libcfg_default.h</FilePath>
+            </File>
+            <File>
+              <FileName>RTC.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\RTC.h</FilePath>
+            </File>
+            <File>
+              <FileName>RTC.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\RTC.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc_types.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc_types.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -986,6 +1031,51 @@
               <FileType>5</FileType>
               <FilePath>.\ADC.h</FilePath>
             </File>
+            <File>
+              <FileName>lpc17xx_rtc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\lpc17xx_rtc.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_rtc.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc17xx_rtc.h</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_clkpwr.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\lpc17xx_clkpwr.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_clkpwr.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc17xx_clkpwr.h</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_libcfg_default.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\lpc17xx_libcfg_default.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc17xx_libcfg_default.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc17xx_libcfg_default.h</FilePath>
+            </File>
+            <File>
+              <FileName>RTC.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\RTC.h</FilePath>
+            </File>
+            <File>
+              <FileName>RTC.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\RTC.c</FilePath>
+            </File>
+            <File>
+              <FileName>lpc_types.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\lpc_types.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1249,7 +1339,7 @@
       <file attr="config" category="source" name="CMSIS\RTOS\RTX\Templates\RTX_Conf_CM.c" version="4.73.0">
         <instance index="0">RTE\CMSIS\RTX_Conf_CM.c</instance>
         <component Capiversion="1.0.0" Cclass="CMSIS" Cgroup="RTOS" Csub="Keil RTX" Cvendor="ARM" Cversion="4.82.0" condition="RTOS RTX" isDefaultVariant="1"/>
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.7.0"/>
+        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="5.8.0"/>
         <targetInfos>
           <targetInfo name="LPC1758 Flash"/>
           <targetInfo name="LPC1768 Flash"/>
